<resources>
    <string name="app_name">LifeCare</string>

    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_main" translatable="false">Main</string>
    <!--nav-->
    <string name="home">Home</string>
    <string name="sendMessage">Send emergency message</string>
    <string name="alarm">On/Off Alarm</string>
    <string name="informationOpen">Click for more information</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="userInfo">User Information</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="drugs">Drugs</string>
    <string name="doctors">Doctors</string>
    <string name="diseases">Diseases</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <!--login, register-->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="goToRegister">Do not have account? Register!</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Register</string>
    <string name="loginError">Login error</string>
    <string name="loginSuccess">Successfully logged in</string>

    <string-array name="languagesArray">
        <item>English</item>
        <item>Spanish</item>
        <item>Polish</item>
    </string-array>

    <string-array name="relationsArray">
        <item>Parent</item>
        <item>Child</item>
        <item>Sibling</item>
    </string-array>

    <string-array name="sexArray">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!--buttons-->
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="helpMessage">Help</string>

    <!--UserData-->
    <string name="userData">User Data</string>
    <string name="surname">Surname</string>
    <string name="sex">Sex</string>
    <string name="updatedUserData">Successfully updated User Data</string>

    <!--Contacts-->
    <string name="contact">Contact</string>
    <string name="addContact">Add Contact</string>
    <string name="addFromContactList">Add from ContactList</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="address">Address</string>
    <string name="Relation">Relation</string>

    <string name="addedContact">Added contact</string>
    <string name="updatedContact">Updated contact</string>
    <string name="deletedContact">Deleted contact</string>
    <string name="problemGetFromList">Failed to pick contact</string>
    <string name="successGetFromList">Successfully picked contact</string>

    <!--Drugs-->
    <string name="drug">Medicine</string>
    <string name="addDrug">Add Medicine</string>
    <string name="nameDrug">Name</string>
    <string name="dosageDrug">Dosage</string>

    <string-array name="dosageArray">
        <item>1 per day</item>
        <item>2 per day</item>
        <item>3 per day</item>
    </string-array>

    <string name="conflictsDrug">Conflicts</string>

    <string name="addedDrug">Added medicine</string>
    <string name="updatedDrug">Updated medicine</string>
    <string name="deletedDrug">Deleted medicine</string>

    <!--Doctors-->
    <string name="doctor">Doctor</string>
    <string name="addDoctor">Add Doctor</string>
    <string name="nameDoctor">Name</string>
    <string name="phoneDoctor">Phone number</string>
    <string name="specialzationDoctor">Specialization</string>

    <string-array name="specializationArray">
        <item>Cardiology</item>
        <item>Dermatology</item>
        <item>Neurology</item>
    </string-array>

    <string name="addedDoctor">Added doctor</string>
    <string name="updatedDoctor">Updated doctor</string>
    <string name="deletedDoctor">Deleted doctor</string>

    <!--Diseases-->
    <string name="addDisease">Add Disease</string>
    <string name="descriptionDisease">Description</string>
    <string name="disease">Disease</string>
    <string name="state">State of disease</string>

    <string-array name="diseasesArray">
        <item>Allergy</item>
        <item>Cancer</item>
        <item>Flu</item>
    </string-array>

    <string-array name="stateArray">
        <item>Ended</item>
        <item>Chronic</item>
        <item>Congenital</item>
    </string-array>

    <string name="addedDisease">Added disease</string>
    <string name="updatedDisease">Updated disease</string>
    <string name="deletedDisease">Deleted disease</string>

    <!--Settings-->
    <string name="savedSettings">Saved settings</string>
    <string name="language">Language</string>
    <string name="showNotification">Show notification</string>

    <!--Notification-->
    <string name="notificationText">Click here for important information about owner of this phone!</string>

</resources>
