<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lifecare.main.Fragments.HomeFragment">

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="120dp"
        android:layout_height="108dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_phone_book_color"
        android:text="@string/contacts"
        app:layout_constraintBottom_toTopOf="@+id/doctorBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/diseaseBtn"
        android:layout_width="120dp"
        android:layout_height="108dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_heart_color"
        android:text="@string/diseases"
        app:layout_constraintBottom_toTopOf="@+id/drugsBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/doctorBtn"
        android:layout_width="120dp"
        android:layout_height="108dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_doctor_color"
        android:text="@string/doctors"
        app:layout_constraintBottom_toTopOf="@+id/settingsBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/drugsBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_drug_color"
        android:text="@string/drugs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_gear_color"
        android:text="@string/action_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/userBtn"
        android:layout_width="120dp"
        android:layout_height="108dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_user_color"
        android:text="@string/userInfo"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/diseaseBtn"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
